--- a/Src/Client/Assembly-CSharp.csproj
+++ b/Src/Client/Assembly-CSharp.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Assets\Scripts\GameObject\TeleporterObject.cs" />
     <Compile Include="Assets\Scripts\LoadingManager.cs" />
     <Compile Include="Assets\Scripts\Log\UnityLogger.cs" />
+    <Compile Include="Assets\Scripts\Managers\BagManager.cs" />
     <Compile Include="Assets\Scripts\Managers\CharacterManager.cs" />
     <Compile Include="Assets\Scripts\Managers\DataManager.cs" />
     <Compile Include="Assets\Scripts\Managers\EntityManager.cs" />
@@ -81,30 +82,32 @@
     <Compile Include="Assets\Scripts\Managers\MinimapManager.cs" />
     <Compile Include="Assets\Scripts\Managers\NPCManager.cs" />
     <Compile Include="Assets\Scripts\Managers\TestManager.cs" />
+    <Compile Include="Assets\Scripts\Models\BagItem.cs" />
     <Compile Include="Assets\Scripts\Models\Item.cs" />
     <Compile Include="Assets\Scripts\Models\User.cs" />
     <Compile Include="Assets\Scripts\Network\NetClient.cs" />
     <Compile Include="Assets\Scripts\Scene\SceneManager.cs" />
     <Compile Include="Assets\Scripts\Services\MapService.cs" />
     <Compile Include="Assets\Scripts\Services\UserService.cs" />
-    <Compile Include="Assets\Scripts\UI\MessageBox.cs" />
-    <Compile Include="Assets\Scripts\UI\TabView\TabButton.cs" />
-    <Compile Include="Assets\Scripts\UI\TabView\TabView.cs" />
-    <Compile Include="Assets\Scripts\UI\UICharacterSelect.cs" />
-    <Compile Include="Assets\Scripts\UI\UICharacterView.cs" />
-    <Compile Include="Assets\Scripts\UI\UICharInfo.cs" />
-    <Compile Include="Assets\Scripts\UI\UIIconItem.cs" />
-    <Compile Include="Assets\Scripts\UI\UILogin.cs" />
-    <Compile Include="Assets\Scripts\UI\UIMain.cs" />
-    <Compile Include="Assets\Scripts\UI\UIManager.cs" />
-    <Compile Include="Assets\Scripts\UI\UIMessageBox.cs" />
+    <Compile Include="Assets\Scripts\UI\CharacterSelect\UICharacterSelect.cs" />
+    <Compile Include="Assets\Scripts\UI\CharacterSelect\UICharacterView.cs" />
+    <Compile Include="Assets\Scripts\UI\CharacterSelect\UICharInfo.cs" />
+    <Compile Include="Assets\Scripts\UI\Login\UILogin.cs" />
+    <Compile Include="Assets\Scripts\UI\Login\UIRegister.cs" />
+    <Compile Include="Assets\Scripts\UI\MessageBox\MessageBox.cs" />
+    <Compile Include="Assets\Scripts\UI\MessageBox\UIMessageBox.cs" />
+    <Compile Include="Assets\Scripts\UI\UIMain\Bag\TabView\TabButton.cs" />
+    <Compile Include="Assets\Scripts\UI\UIMain\Bag\TabView\TabView.cs" />
+    <Compile Include="Assets\Scripts\UI\UIMain\Bag\UIBag.cs" />
+    <Compile Include="Assets\Scripts\UI\UIMain\Bag\UIIconItem.cs" />
+    <Compile Include="Assets\Scripts\UI\UIMain\UIMain.cs" />
+    <Compile Include="Assets\Scripts\UI\UIMain\UIManager.cs" />
+    <Compile Include="Assets\Scripts\UI\UIMain\UITest.cs" />
+    <Compile Include="Assets\Scripts\UI\UIMain\UIWindow.cs" />
     <Compile Include="Assets\Scripts\UI\UIMinimap\UIMinimap.cs" />
-    <Compile Include="Assets\Scripts\UI\UINameBar.cs" />
-    <Compile Include="Assets\Scripts\UI\UIRegister.cs" />
-    <Compile Include="Assets\Scripts\UI\UITest.cs" />
-    <Compile Include="Assets\Scripts\UI\UIWindow.cs" />
-    <Compile Include="Assets\Scripts\UI\UIWorldElement.cs" />
-    <Compile Include="Assets\Scripts\UI\UIWorldElementManager.cs" />
+    <Compile Include="Assets\Scripts\UI\UIWorldElement\UINameBar.cs" />
+    <Compile Include="Assets\Scripts\UI\UIWorldElement\UIWorldElement.cs" />
+    <Compile Include="Assets\Scripts\UI\UIWorldElement\UIWorldElementManager.cs" />
     <Compile Include="Assets\Scripts\Utilities\GameUtil.cs" />
     <Compile Include="Assets\Scripts\Utilities\MonoSingleton.cs" />
     <Compile Include="Assets\Scripts\Utilities\Singleton.cs" />
