--- a/Src/Lib/Common/Common.csproj
+++ b/Src/Lib/Common/Common.csproj
@@ -52,6 +52,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BufferUtility.cs" />
+    <Compile Include="Data\ShopItemDefine.cs" />
+    <Compile Include="Data\ShopDefine.cs" />
     <Compile Include="Data\CharacterDefine.cs" />
     <Compile Include="Data\ItemDefine.cs" />
     <Compile Include="Data\SpawnRuleDefine.cs" />
