1.修复了购买物品出现多份物品的显示bug 2.修复了返回选择角色界面再回来，购买出错的显示bug 3.完成了装备系统基础功能逻辑 4.对现有UI进行美化

--- a/Src/Client/Assembly-CSharp.csproj
+++ b/Src/Client/Assembly-CSharp.csproj
@@ -85,7 +85,7 @@
     <Compile Include="Assets\Scripts\Managers\ShopManager.cs" />
     <Compile Include="Assets\Scripts\Managers\TestManager.cs" />
     <Compile Include="Assets\Scripts\Models\BagItem.cs" />
-    <Compile Include="Assets\Scripts\Models\item.cs" />
+    <Compile Include="Assets\Scripts\Models\Item.cs" />
     <Compile Include="Assets\Scripts\Models\User.cs" />
     <Compile Include="Assets\Scripts\Network\NetClient.cs" />
     <Compile Include="Assets\Scripts\Scene\SceneManager.cs" />
@@ -105,7 +105,7 @@
     <Compile Include="Assets\Scripts\UI\UIMain\Bag\UIBag.cs" />
     <Compile Include="Assets\Scripts\UI\UIMain\Bag\UIIconItem.cs" />
     <Compile Include="Assets\Scripts\UI\UIMain\CharEquip\UICharEquip.cs" />
-    <Compile Include="Assets\Scripts\UI\UIMain\CharEquip\UICharEquipItem.cs" />
+    <Compile Include="Assets\Scripts\UI\UIMain\CharEquip\UIEquipItem.cs" />
     <Compile Include="Assets\Scripts\UI\UIMain\Shop\UIShop.cs" />
     <Compile Include="Assets\Scripts\UI\UIMain\Shop\UIShopItem.cs" />
     <Compile Include="Assets\Scripts\UI\UIMain\UIMain.cs" />
