--- a/Src/Server/GameServer/GameServer/GameServer.csproj
+++ b/Src/Server/GameServer/GameServer/GameServer.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Managers\ItemManager.cs" />
     <Compile Include="Managers\MapManager.cs" />
     <Compile Include="Managers\ShopManager.cs" />
+    <Compile Include="Managers\QuestManager.cs" />
     <Compile Include="Managers\StatusManager.cs" />
     <Compile Include="Models\Item.cs" />
     <Compile Include="Models\Map.cs" />
@@ -136,6 +137,7 @@
     <Compile Include="Services\BagService.cs" />
     <Compile Include="Services\DBService.cs" />
     <Compile Include="Services\ItemService.cs" />
+    <Compile Include="Services\QuestService.cs" />
     <Compile Include="Services\MapService.cs" />
     <Compile Include="Services\UserSerevice.cs" />
     <Compile Include="Settings.cs" />
@@ -147,6 +149,9 @@
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
     <Compile Include="TCharacterItem.cs">
+      <DependentUpon>Entities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TCharacterQuest.cs">
       <DependentUpon>Entities.tt</DependentUpon>
     </Compile>
     <Compile Include="TPlayer.cs">
