--- a/Src/Server/GameServer/GameServer/GameServer.csproj
+++ b/Src/Server/GameServer/GameServer/GameServer.csproj
@@ -121,9 +121,11 @@
     <Compile Include="Managers\QuestManager.cs" />
     <Compile Include="Managers\Spawner.cs" />
     <Compile Include="Managers\SessionManager.cs" />
+    <Compile Include="Managers\TeamManager.cs" />
     <Compile Include="Managers\SpawnManager.cs" />
     <Compile Include="Managers\StatusManager.cs" />
     <Compile Include="Models\Item.cs" />
+    <Compile Include="Models\Team.cs" />
     <Compile Include="Models\Map.cs" />
     <Compile Include="Network\ExtensionMethods.cs" />
     <Compile Include="Network\INetSession.cs" />
@@ -140,6 +142,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Services\TeamService.cs" />
     <Compile Include="Services\FriendService.cs" />
     <Compile Include="Services\BagService.cs" />
     <Compile Include="Services\DBService.cs" />
